# NOTE: you have to use single-quoted strings in TOML for regular expressions. It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space character.

# When deploying to new project:
# 1. Ctrl+F replace "PyTemplate" with module name
# 2. Update description
# 3. Add any necessary dependencies / dev-dependencies as you install them

[build-system]
requires = ['setuptools >= 40.6.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'PythonTemplate'
# Versions are [Year].[Release of Year]
version = '2022.4'
description = 'Python template file for faster setup and builds'
requires-python = '>=3.7'
license = {file = "LICENSE.txt"}
keywords = ['Python']
authors = [{email = 'kylekaptbone@yahoo.com'},{name = 'Kyle Patterson'}]
classifiers = ['Programming Language :: Python']
dynamic = ['readme']
dependencies = ['flake8']

[tool.setuptools.dynamic]
readme = {file = ['README.md']}

[project.optional-dependencies]
dev = [
'black>=22.3.0',
'flake8-html>=0.4.2',
'genbadge>=1.1.0',
'isort>=5.10.1',
'pytest>=7.1.2',
'coverage>=6.4.2',
'pre-commit>=2.20.0',
'defusedxml>=0.7.1'
]

[project.urls]
homepage = 'https://github.com/kylekap/PythonTemplate'
documentation = 'https://github.com/kylekap/PythonTemplate/tree/main/docs'
repository = 'https://github.com/kylekap/PythonTemplate'
changelog = 'https://github.com/kylekap/PythonTemplate/tree/main/Docs/Changelog.md'


[tool.black]
line-length = 120
target_version = ['py39']

[tool.coverage.paths]
source = ['src']
tests = ['tests']

[tool.coverage.run]
source = ['src']

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:"]

[tool.isort]
import_heading_firstparty = 'First-party/Local'
import_heading_future = 'Future'
import_heading_stdlib = 'Standard library'
import_heading_thirdparty = 'Third-party'
profile = 'black'